Fix for overlapping site name

--- a/src/themes/default/src/scss/_header.scss
+++ b/src/themes/default/src/scss/_header.scss
@@ -93,6 +93,7 @@ $header-link-active-background: #003776 !default;
   font-weight: 300;
   color: $white;
   vertical-align: middle;
+  max-width: 85%;
 }
 
 .bcl-header .navbar-toggler {
